--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 .idea
 application.properties
-/target/
-/client/target/
 /client/src/script.py
 /client/src/jdbc_s3.py
 /src/test/resources/test_json.py
 /client/src/main/resources/test_json.py
 /client/src/main/script.py
 /client/src/main/test_json.py
+/client/target/**
